--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  height: inherit;
+}
+
+#navbar {
+  box-shadow: inset 0px -2px 2px gray;
+}
+
+#aside {
+  background: rgb(5, 27, 52);
+}
+
+.aside-link {
+  border: transparent;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100%;
+  height: 100%;
+}
+
+.div-aside-link {
+  display: flex;
+}
+
+.div-aside-link:hover {
+  background: rgb(26, 26, 40);
+}
+
+.aside-logo {
+  height: 50px;
+  width: 100%;
+}
+
+.img-logo {
+  width: inherit;
+  height: inherit;
 }
