--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,8 @@ nav {
   width: 100%;
 }
 
-.aside-logo a,.img-logo {
+.aside-logo a,
+.img-logo {
   width: inherit;
   height: inherit;
   background-image: black;
@@ -60,9 +61,84 @@ nav {
   border-top-left-radius: 15px;
 }
 
-table{
-  border-collapse:collapse !important;
-  border-radius: 1em !important; 
+table {
+  border-collapse: collapse !important;
+  border-radius: 1em !important;
   overflow: hidden;
 }
 
+/* MODAL MODEL */
+
+#modal-overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* z-index: 2; */
+  background: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  z-index: 2;
+}
+
+#modal-base {
+  position: relative;
+  /* margin: auto; */
+  width: 500px;
+  min-width: 100px;
+  min-height: 100px;
+  height: 500px;
+  border: 2px solid red;
+  flex-direction: column;
+  border-radius: 8px;
+  background-color: white;
+}
+
+.modal-head {
+  display: flex;
+  margin: 0 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-head {
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+  border-bottom: 2px solid black;
+  margin-bottom: 4px;
+  /* background-color: whitesmoke; */
+  /* padding; */
+}
+
+#modal-head div:first-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-body {
+  height: calc(100% - 110px);
+  border: 2px s olid black;
+  margin-bottom: 4px;
+}
+
+#close-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#close-modal .btn {
+  border: none;
+}
+
+#modal-footer {
+  height: 50px;
+  border-top: 2px solid black;
+  margin-bottom: 0px;
+}
